tests/rosetta/out/Smalltalk/csv-to-html-translation-5.out
/tmp/csv-to-html-translation-5.st:8: parse error, expected ']'
