tests/rosetta/out/Smalltalk/csv-to-html-translation-5.st
" Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
"
| split out start i n htmlEscape ch c rows line row cells cell |
split := [:s :sep | out := {}.
start := 0.
i := 0.
n := (sep size).
[(i <= ((((s size)) - n)))] whileTrue: [.
((((s copyFrom: i to: (i + n))) = sep)) ifTrue: [
out := out copyWith: (s copyFrom: start to: i).
i := (i + n).
start := i.
] ifFalse: [
i := (i + 1).
].
].
.
out := out copyWith: (s copyFrom: start to: (s size)).
out. ].
htmlEscape := [:s | out := ''.
i := 0.
[(i < ((s size)))] whileTrue: [.
ch := (s copyFrom: i to: (i + 1)).
((ch = '&')) ifTrue: [
out := (out + '&amp;').
] ifFalse: [
((ch = '<')) ifTrue: [
out := (out + '&lt;').
] ifFalse: [
((ch = '>')) ifTrue: [
out := (out + '&gt;').
] ifFalse: [
out := (out + ch).
].
].
].
i := (i + 1).
].
.
out. ].
c := ((((((((('Character,Speech
' + ('The multitude,The messiah! Show us the messiah!
'))) + ('Brians mother,<angry>Now you listen here! He''s not the messiah; he''s a very naughty boy! Now go away!</angry>
'))) + ('The multitude,Who are you?
'))) + ('Brians mother,I''m his mother; that''s who!
'))) + ('The multitude,Behold his mother! Behold his mother!')).
rows := {}.
split value: c value: '
' do: [:line |.
rows := rows copyWith: split value: line value: ','.
].
.
Transcript show: '<table>'; cr.
rows do: [:row |.
cells := ''.
row do: [:cell |.
cells := (((((cells + '<td>')) + (htmlEscape value: cell))) + '</td>').
].
.
Transcript show: ((((('    <tr>') + cells)) + '</tr>')) printString; cr.
].
.
Transcript show: '</table>'; cr.
